<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_routine">

    <fragment
        android:id="@+id/navigation_routine"
        android:name="com.example.savehometraining.ui.Routine.RoutineFragment"
        android:label="@string/title_Routine"
        tools:layout="@layout/main_fragment_routine" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.savehometraining.ui.calendar.CalendarFragment"
        android:label="@string/title_Calendar"
        tools:layout="@layout/main_fragment_calendar" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.savehometraining.ui.community.CommunityFragment"
        android:label="@string/title_Community"
        tools:layout="@layout/main_fragment_community" />
</navigation>