<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/re1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_close"
                    android:scaleType="centerInside"
                    android:padding="0sp"
                    android:background="#00000000"
                    android:layout_alignParentLeft="true"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activityName"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"/>

                <ImageButton
                    android:id="@+id/button_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_ok"
                    android:scaleType="centerInside"
                    android:padding="0sp"
                    android:background="#00000000"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <View
                android:id="@+id/bodyline1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#d3d0d0"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="8dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    android:src="@drawable/icon_layer"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentRight="true"/>

                <View
                    android:id="@+id/bodyline2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#d3d0d0"
                    android:layout_below="@+id/title"/>


                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:hint="@string/content"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/bodyline2"/>


            </RelativeLayout>
<!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:id="@+id/imageview_add1"
                    android:src="@drawable/comunity_addimage"
                    />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/imageview_add2"
                    android:src="@drawable/comunity_addimage"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/imageview_add3"
                    android:src="@drawable/comunity_addimage"/>


            </LinearLayout>
            -->
        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/imageview_add1"
            android:src="@drawable/comunity_addimage"
            />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imageview_add2"
            android:src="@drawable/comunity_addimage"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imageview_add3"
            android:src="@drawable/comunity_addimage"/>


    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#d3d0d0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:scaleType="centerInside"
            android:padding="0sp"
            android:background="#00000000"
            android:src="@drawable/icon_photo"/>

        <ImageButton
            android:id="@+id/button_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:src="@drawable/icon_color"
            android:scaleType="centerInside"
            android:padding="0sp"
            android:background="#00000000"
            android:layout_marginLeft="16dp"/>

        <ImageButton
            android:id="@+id/button_align"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:src="@drawable/icon_align"
            android:scaleType="centerInside"
            android:padding="0sp"
            android:background="#00000000"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

</LinearLayout>